# poly

./: .gitignore  LIVE_TRADING_ANALYSIS.md  Makefile  README.md  TECHNICAL_DOCUMENTATION.md  TRADING_STRATEGY.md  build.sh  docker-compose.yml  ecosystem.config.cjs  env.example  package-lock.json  package.json  run-bot-forever.sh  scrape_market.js  tailwind.config.js  tsconfig.base.json  tsconfig.json
apps/bot/: package.json  tsconfig.json
apps/bot/src/: cli.ts  index.ts
apps/bot/src/api/: commandHandler.ts  server.ts
apps/bot/src/core/: dumpDetector.test.ts  dumpDetector.ts  engine.ts  paperExecution.ts
apps/bot/src/services/: database.ts  liveExecution.ts  marketDiscovery.ts  polymarketClient.ts  wallet.ts  websocket.ts
apps/bot/src/utils/: logger.ts
apps/dashboard/: next.config.js  package.json  tailwind.config.js
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/cycles/: page.tsx
apps/dashboard/src/app/terminal/: page.tsx
apps/dashboard/src/app/trades/: page.tsx
apps/dashboard/src/components/: CommandInput.tsx  ConfigBar.tsx  ConfigPanel.tsx  CycleInfo.tsx  CyclesTable.tsx  EquityChart.tsx  LiveTradingStatus.tsx  LogViewer.tsx  MarketInfo.tsx  Navigation.tsx  OrderbookDisplay.tsx  StatusCard.tsx  Terminal.tsx  TradesTable.tsx  WalletDropdown.tsx
apps/dashboard/src/hooks/: useWebSocket.ts
apps/dashboard/src/lib/: api.ts  utils.ts
cpp-bot/: CMakeLists.txt  README.md  deploy-ec2.sh
cpp-bot/include/: api_server.hpp  async_writer.hpp  database.hpp  polymarket_client.hpp  trading_engine.hpp  websocket_client.hpp  ws_server.hpp
cpp-bot/src/: main.cpp  main.cpp.backup
cpp-bot/src/api/: api_server.cpp  api_server.cpp.bak
cpp-bot/src/database/: async_writer.cpp  database.cpp
cpp-bot/src/engine/: trading_engine.cpp
cpp-bot/src/network/: polymarket_client.cpp  websocket_client.cpp  websocket_client.cpp.bak2  ws_server.cpp
cpp-bot/src/utils/: logger.cpp
include/: api_server.hpp  database.hpp  dump_detector.hpp  logger.hpp  trading_engine.hpp  websocket_client.hpp
prisma/: schema.prisma
scripts/: deploy-ec2.sh  order_executor.py  requirements.txt  setup.sh  start-local.sh
shared/src/: constants.ts
src/: main.cpp  middleware.ts
src/api/: api_server.cpp
src/app/: page.tsx
src/components/: CommandInput.tsx  CycleInfo.tsx  EquityChart.tsx  LogViewer.tsx  OrderbookDisplay.tsx  Terminal.tsx  TradesTable.tsx  WalletDropdown.tsx
src/engine/: dca_manager.cpp  dump_detector.cpp  trading_engine.cpp
src/hooks/: useWebSocket.ts
src/lib/: api.ts  utils.ts
src/network/: polymarket_client.cpp  websocket_client.cpp
